# car-service-agent

./: README.md  pyproject.toml
src/app/: __init__.py  calendar_service.py  config.py  email_service.py  openai_service.py  routes.py
src/static/css/: styles.css
src/static/js/: app.js
src/templates/: call.html
